{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 66,
  "lineage": "143c4833-7a59-99f2-562c-992abb99e5e8",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:security-group/sg-01340a33ad5ab777d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01340a33ad5ab777d",
            "ingress": [],
            "name": "ITP4122-VTC_Service-cluster-2024061704253238940000000b",
            "name_prefix": "ITP4122-VTC_Service-cluster-",
            "owner_id": "905418454619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ITP4122-VTC_Service-cluster"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-VTC_Service-cluster",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:security-group/sg-04bf93fe0cd68337f",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-04bf93fe0cd68337f",
            "ingress": [],
            "name": "ITP4122-VTC_Service-node-2024061704253239040000000c",
            "name_prefix": "ITP4122-VTC_Service-node-",
            "owner_id": "905418454619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ITP4122-VTC_Service-node",
              "kubernetes.io/cluster/ITP4122-VTC_Service": "owned"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-VTC_Service-node",
              "Project": "ITP4122-VTC_SERVICES",
              "kubernetes.io/cluster/ITP4122-VTC_Service": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-458904755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01340a33ad5ab777d",
            "security_group_rule_id": "sgr-023a63c671de880ce",
            "self": false,
            "source_security_group_id": "sg-04bf93fe0cd68337f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4110978620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-0a5940def559a89af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-757545124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-0795245905200a354",
            "self": false,
            "source_security_group_id": "sg-01340a33ad5ab777d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4057499699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-07ca6f70daadc3160",
            "self": false,
            "source_security_group_id": "sg-01340a33ad5ab777d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-949677989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-06ec162f1b6ff703c",
            "self": false,
            "source_security_group_id": "sg-01340a33ad5ab777d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-734450564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-04c9bd4c7459f4313",
            "self": false,
            "source_security_group_id": "sg-01340a33ad5ab777d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1332207695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-0fdbdfc51b9230919",
            "self": false,
            "source_security_group_id": "sg-01340a33ad5ab777d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3219074067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-018dd39f0b0213b5b",
            "self": false,
            "source_security_group_id": "sg-01340a33ad5ab777d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-306963997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-01d8784b35941f2cb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1253701851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-0415412b2aa9a56fa",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4008074036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04bf93fe0cd68337f",
            "security_group_rule_id": "sgr-0a2e371955d25c851",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:network-acl/acl-06f4405cc7ee6b911",
            "default_network_acl_id": "acl-06f4405cc7ee6b911",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06f4405cc7ee6b911",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "905418454619",
            "subnet_ids": [
              "subnet-0488bf1d5ad951dae",
              "subnet-05bda06220fe0b92e",
              "subnet-082457bbcb0a5e797",
              "subnet-08ffe0c5327b938cb",
              "subnet-0d12240a3bc930b8f",
              "subnet-0fb48824a1c7a7641"
            ],
            "tags": {
              "Name": "ITP4122-Service-VPC-default"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-default",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:route-table/rtb-0b46a5355a954b121",
            "default_route_table_id": "rtb-0b46a5355a954b121",
            "id": "rtb-0b46a5355a954b121",
            "owner_id": "905418454619",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "ITP4122-Service-VPC-default"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-default",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:security-group/sg-029aca1a943f04728",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-029aca1a943f04728",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "905418454619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ITP4122-Service-VPC-default"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-default",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030442d02961f2e4f",
            "arn": "arn:aws:ec2:us-east-1:905418454619:elastic-ip/eipalloc-030442d02961f2e4f",
            "domain": "vpc",
            "id": "eipalloc-030442d02961f2e4f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-27-78-151.compute-1.amazonaws.com",
            "public_ip": "100.27.78.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ITP4122-Service-VPC-us-east-1a"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-us-east-1a",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:internet-gateway/igw-0ffd2e45b488178fd",
            "id": "igw-0ffd2e45b488178fd",
            "owner_id": "905418454619",
            "tags": {
              "Name": "ITP4122-Service-VPC"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030442d02961f2e4f",
            "association_id": "eipassoc-099681583447e0006",
            "connectivity_type": "public",
            "id": "nat-0bfc49d0e753e51ac",
            "network_interface_id": "eni-04dade38ff5ef9a12",
            "private_ip": "10.0.2.199",
            "public_ip": "100.27.78.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ffe0c5327b938cb",
            "tags": {
              "Name": "ITP4122-Service-VPC-us-east-1a"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-us-east-1a",
              "Project": "ITP4122-VTC_SERVICES"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03852f4250f6f0cd21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bfc49d0e753e51ac",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03852f4250f6f0cd2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ffd2e45b488178fd",
            "id": "r-rtb-06fc96c15e1c8b5871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fc96c15e1c8b587",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:route-table/rtb-02ed35d37f3b7f491",
            "id": "rtb-02ed35d37f3b7f491",
            "owner_id": "905418454619",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ITP4122-Service-VPC-intra"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-intra",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:route-table/rtb-03852f4250f6f0cd2",
            "id": "rtb-03852f4250f6f0cd2",
            "owner_id": "905418454619",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ITP4122-Service-VPC-private"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-private",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:route-table/rtb-06fc96c15e1c8b587",
            "id": "rtb-06fc96c15e1c8b587",
            "owner_id": "905418454619",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ITP4122-Service-VPC-public"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-public",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "timeouts": null,
            "vpc_id": "vpc-0271c03827da049da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2729b44b015ec2b",
            "route_table_id": "rtb-02ed35d37f3b7f491",
            "subnet_id": "subnet-082457bbcb0a5e797"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcf8a0505e32debf",
            "route_table_id": "rtb-02ed35d37f3b7f491",
            "subnet_id": "subnet-05bda06220fe0b92e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e11e392efc1924e",
            "route_table_id": "rtb-03852f4250f6f0cd2",
            "subnet_id": "subnet-0d12240a3bc930b8f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e005e13743b91d5",
            "route_table_id": "rtb-03852f4250f6f0cd2",
            "subnet_id": "subnet-0488bf1d5ad951dae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00047818277501db0",
            "route_table_id": "rtb-06fc96c15e1c8b587",
            "subnet_id": "subnet-08ffe0c5327b938cb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04947ca44be264a22",
            "route_table_id": "rtb-06fc96c15e1c8b587",
            "subnet_id": "subnet-0fb48824a1c7a7641"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:subnet/subnet-082457bbcb0a5e797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082457bbcb0a5e797",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418454619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITP4122-Service-VPC-intra-us-east-1a"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-intra-us-east-1a",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:subnet/subnet-05bda06220fe0b92e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bda06220fe0b92e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418454619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITP4122-Service-VPC-intra-us-east-1b"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-intra-us-east-1b",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:subnet/subnet-0d12240a3bc930b8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d12240a3bc930b8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418454619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITP4122-Service-VPC-private-us-east-1a"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-private-us-east-1a",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:subnet/subnet-0488bf1d5ad951dae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0488bf1d5ad951dae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418454619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITP4122-Service-VPC-private-us-east-1b"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-private-us-east-1b",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:subnet/subnet-08ffe0c5327b938cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ffe0c5327b938cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418454619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITP4122-Service-VPC-public-us-east-1a"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-public-us-east-1a",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:subnet/subnet-0fb48824a1c7a7641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb48824a1c7a7641",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418454619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITP4122-Service-VPC-public-us-east-1b"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC-public-us-east-1b",
              "Project": "ITP4122-VTC_SERVICES"
            },
            "vpc_id": "vpc-0271c03827da049da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418454619:vpc/vpc-0271c03827da049da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f4405cc7ee6b911",
            "default_route_table_id": "rtb-0b46a5355a954b121",
            "default_security_group_id": "sg-029aca1a943f04728",
            "dhcp_options_id": "dopt-0014bc472502658bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0271c03827da049da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b46a5355a954b121",
            "owner_id": "905418454619",
            "tags": {
              "Name": "ITP4122-Service-VPC"
            },
            "tags_all": {
              "Created_by": "Terrafrom",
              "Name": "ITP4122-Service-VPC",
              "Project": "ITP4122-VTC_SERVICES"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}